[metadata]
name = llcv
version = attr: llcv.__version__
description = A modular and extensible framework for computer vision
long_description = See project page: https://github.com/mtli/llcv
home_page = https://github.com/mtli/llcv
author = Mengtian (Martin) Li
author_email = martinli.work@gmail.com
license = MIT
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
keywords = latency, throughput, computer vision, deep learning, pytorch 

[options]
packages = find:
include_package_data = True
python_requires = >=3
install_requires=
    python-dateutil
    py-cpuinfo
    tqdm
    numpy
    pillow
    tensorboard
    linearlr
    pycocotools
    scipy

